Added useful methods
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -1,5 +1,5 @@
 <ion-list>
-  
+
   <!--Ion-item for each current student in the queue, but there will be one more item (see last one)-->
   <ion-item>
   <!-- <ion-item *ngFor="let student of studentQueue"> -->
@@ -12,7 +12,7 @@
     <h5 item-start>David Peletz</h5>
     <ion-badge item-end>2</ion-badge>
   </ion-item>
-  <ion-item> 
+  <ion-item>
     <h5 item-start>Juan Da</h5>
     <ion-badge item-end>3</ion-badge>
   </ion-item>
@@ -20,8 +20,8 @@
   <ion-item>
     <!--Pressing button will lead to queue being updates with current student added in the last position-->
     <!--It will also cause the ion-item under this one to replace this item-->
-    <button item-start ion-button clear >
-      <ion-icon name="add-circle" color="primary" (click)="addStudent(1)"></ion-icon>
+    <button item-start ion-button clear (click)="addStudent(2)">
+      <ion-icon name="add-circle" color="primary"></ion-icon>
     </button>
     <!--The current student-->
     <h5>{{ profile.name }}</h5>
