--- a/src/components/profile-view/profile-view.html
+++ b/src/components/profile-view/profile-view.html
@@ -11,8 +11,11 @@
     </ion-item>
   </ion-card-content>
 </ion-card>
-<ion-row>
-  <ion-col text-center>
-    <button ion-button block color="danger" class="signOut" (click)="signOut()">Sign out</button>
-  </ion-col>
-</ion-row>
+
+
+  <ion-row>
+    <ion-col>
+      <button ion-button block color="danger" class="signOut" (click)="signOut()">Sign out</button>
+    </ion-col>
+  </ion-row>
+
