--- a/src/components/office-hours-list/office-hours-list.html
+++ b/src/components/office-hours-list/office-hours-list.html
@@ -23,13 +23,13 @@
         </button>
       </ion-item>
       <ion-item *ngIf="!currentOfficeHours && officeHoursList.length > 0">
-        <button ion-button padding clear small [navPush]="'StudentQueuePage'" [navParams]="{course: course}">
+        <button ion-button padding clear small [navPush]="'StudentQueuePage'" [navParams]="{course: course, i: 0}">
           {{ officeHoursList[0].date }}
         </button>
       </ion-item>
       <ng-container *ngIf="this.officeHoursList.length > 1">
         <ion-item *ngFor="let i of _.range(1, this.officeHoursList.length)">
-          <button ion-button padding clear small [navPush]="'StudentQueuePage'" [navParams]="{course: course}">
+          <button ion-button padding clear small [navPush]="'StudentQueuePage'" [navParams]="{course: course, i: i}">
             {{ officeHoursList[i].date }}
           </button>
         </ion-item>
