--- a/src/components/queue-for-instructors/queue-for-instructors.html
+++ b/src/components/queue-for-instructors/queue-for-instructors.html
@@ -1,49 +1,13 @@
-<!--You will need to link "reordering" of the queue (moving around stuff) with actually updating the queue-->
-<ion-list reorder="true">
-    <ion-item *ngFor="let student of studentQueue">
+<h5 *ngIf="studentQueue?.length === 0">Queue is empty</h5>
+<ion-list>
+  <ion-item-group reorder="true" (ionItemReorder)="reorderQueue($event)">
+    <ion-item *ngFor="let student of studentQueue; let i = index">
       <button item-start ion-button clear>
-        <ion-icon name="remove-circle" color="primary" (click)="removeStudent(student, officeHourIndex)"></ion-icon>
+        <ion-icon name="remove-circle" color="primary" (click)="removeStudent(student)"></ion-icon>
       </button>
-      <h5 > {{student}}</h5>
-      <!-- <h5 *ngIf="studentQueue.indexOf(student) > 0"> {{profileDataProvider.getProfileByKey(student)}}</h5> -->
-    <!--Ion-item for each student in the queue-->
-    <!-- <ion-item>
-      <!--If instructor presses button, student is removed and queue is updated-->
-      <!-- <button item-start ion-button clear>
-        <ion-icon name="remove-circle" color="primary"></ion-icon>
-      </button>
-      <!--Name of student-->
-      <!-- <h5>Raza Khalid</h5> --> 
-      <!--Instead of 1, position in queue-->
-      <ion-badge item-end>1</ion-badge>
-    </ion-item>
-    <!-- <ion-item>  -->
-    <!-- <button item-start ion-button clear>
-        <ion-icon name="remove-circle" color="primary"></ion-icon>
-      </button>
-      <h5>Raza</h5>
-      <ion-badge item-end>1</ion-badge> -->
-    <!-- </ion-item> -->
-  </ion-list>
+      <h5 > {{student.name}}</h5>
 
-    <!-- <ion-item>
-      <button item-start ion-button clear>
-        <ion-icon name="remove-circle" color="primary"></ion-icon>
-      </button>
-      <h5>David Peletz</h5>
-      <ion-badge item-end>2</ion-badge>
+      <ion-badge item-end>{{ i + 1 }}</ion-badge>
     </ion-item>
-    <ion-item>
-      <button item-start ion-button clear>
-        <ion-icon name="remove-circle" color="primary"></ion-icon>
-      </button>
-      <h5>Juan Da</h5>
-      <ion-badge item-end>3</ion-badge>
-    </ion-item>
-    <ion-item>
-      <button item-start ion-button clear>
-        <ion-icon name="remove-circle" color="primary"></ion-icon>
-      </button>
-      <h5>Salman Ahmed</h5>
-      <ion-badge item-end>4</ion-badge>
-    </ion-item> -->
+  </ion-item-group>
+</ion-list>
