--- a/src/components/edit-profile-form/edit-profile-form.html
+++ b/src/components/edit-profile-form/edit-profile-form.html
@@ -2,7 +2,7 @@
   <ion-card>
     <ion-card-content>
       <ion-item>
-        <ion-label floating>Preferred name</ion-label>
+        <ion-label stacked>Preferred name</ion-label>
         <ion-input
           [(ngModel)]="profile.name"
           type="text"
