--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -46,7 +46,7 @@
     color: white;
     font-weight: bold;
     font-family: Chalkboard, sans-serif;
-    font-size: 140%;
+    font-size: 125%;
   }
 
   .input{
@@ -55,6 +55,10 @@
     padding-left: 3%;
   }
 
+}
+
+.text-input {
+  font-size: 140%;
 }
 
 .content * {
