--- a/src/components/office-hours-list/office-hours-list.html
+++ b/src/components/office-hours-list/office-hours-list.html
@@ -23,7 +23,7 @@
         </button>
       </ion-item>
       <ion-item *ngIf="!currentOfficeHours && officeHoursList.length > 0">
-        <button ion-button
+        <button class="sub-header" ion-button
                 padding clear small
                 [navPush]="'StudentQueuePage'"
                 [navParams]="{course: course, officeHours: officeHoursList[0]}">
