--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -1,12 +1,15 @@
 profile-view {
   .signOut {
-
     //background: map-get($colors, danger);
     background: transparent;
     border: white solid 2px;
     //font-size: 200%;
     //height: 360%;
     //width: 40%;
+    text-transform: capitalize;
+    width: 30%;
+    margin-right: auto;
+    margin-left: auto;
   }
 
 
