--- a/src/components/edit-profile-form/edit-profile-form.html
+++ b/src/components/edit-profile-form/edit-profile-form.html
@@ -33,7 +33,7 @@
 
       <ion-row>
         <ion-col text-end>
-        <button
+        <button class="save-button"
           ion-button
           (click)="saveProfile()"
           [disabled]="editProfileForm.invalid || (!studentCheck && !instructorCheck)">Save</button>
