--- a/src/pages/office-hours/office-hours.scss
+++ b/src/pages/office-hours/office-hours.scss
@@ -1,5 +1,10 @@
 page-office-hours {
-  h2.headertekst {
+
+  .editHoursButton{
+    font-size: 100%;
+  }
+
+  ion-row{
     text-align: center;
   }
 }
