Login/SignOut/SignUp/AddProfile more reliable now
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/edit-hours-form/edit-hours-form.html
+++ b/src/components/edit-hours-form/edit-hours-form.html
@@ -18,7 +18,7 @@
             float-end
             class="no-box-shadow"
             (click)="removeOfficeHours(newOfficeHours)"
-            [disabled]>
+            disabled>
             <ion-icon name="trash"></ion-icon>
           </button>
           <ion-card-content>
