--- a/src/components/edit-profile-form/edit-profile-form.scss
+++ b/src/components/edit-profile-form/edit-profile-form.scss
@@ -1,3 +1,9 @@
 edit-profile-form {
-
+  .myAvatar {
+    position: relative;
+    width: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 90px;
+  }
 }
