--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -21,4 +21,12 @@ profile-view {
     text-align: center;
   }
 
+  .myAvatar {
+    position: relative;
+    width: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 90px;
+  }
+
 }
