--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -1,7 +1,8 @@
 <h2 padding *ngIf="studentQueue?.length === 0">Queue is empty</h2>
 <ion-list>
   <ion-item *ngFor="let student of studentQueue; let i = index">
-    <h4 item-start>{{ student.name }}</h4>
+    <ion-avatar item-start><img [src]="student.avatarURL"></ion-avatar>
+    <span item-start>{{ student.name }}</span>
     <ion-badge item-end>{{ i + 1 }}</ion-badge>
   </ion-item>
 </ion-list>
