--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -1,4 +1,4 @@
-<h2 padding *ngIf="studentQueue?.length === 0">Queue is empty</h2>
+<h2 padding *ngIf="studentQueue?.length === 0">Is empty</h2>
 <ion-list>
   <ion-item *ngFor="let student of studentQueue; let i = index">
     <ion-avatar item-start><img [src]="student.avatarURL"></ion-avatar>
