--- a/src/components/edit-hours-form/edit-hours-form.html
+++ b/src/components/edit-hours-form/edit-hours-form.html
@@ -39,7 +39,18 @@
                            [disabled]="!instructing.value"></ion-input>
               </ion-item>
 
-              <ion-item>
+              <ion-item padding-top>
+                <ion-label stacked>Day</ion-label>
+                <ion-select [(ngModel)]="newOfficeHours.dayOfWeek"
+                            name="newDayOfWeek"
+                            required
+                            placeholder="Monday"
+                            [disabled]="!instructing.value">
+                  <ion-option *ngFor="let day of days" [value]="day">{{ day }}</ion-option>
+                </ion-select>
+              </ion-item>
+
+              <ion-item class="OHTime" float-start padding-top>
                 <ion-label stacked>Start Time</ion-label>
                 <ion-datetime [(ngModel)]="newOfficeHours.startTime"
                               (ionChange)="fillEndTime(newOfficeHours); isValid(newOfficeHours)"
@@ -50,7 +61,7 @@
                               placeholder="00:00 pm"
                               [disabled]="!instructing.value"></ion-datetime>
               </ion-item>
-              <ion-item>
+              <ion-item class="OHTime" float-end padding-top>
                 <ion-label stacked>End Time</ion-label>
                 <ion-datetime [(ngModel)]="newOfficeHours.endTime"
                               (ionChange)="isValid(newOfficeHours)"
@@ -66,26 +77,11 @@
                 <span class="global__input-error">{{ newOfficeHours.error }}</span>
               </div>
 
-              <ion-item>
-                <ion-label stacked>Day</ion-label>
-                <ion-select [(ngModel)]="newOfficeHours.dayOfWeek"
-                            name="newDayOfWeek"
-                            required
-                            placeholder="Monday"
-                            [disabled]="!instructing.value">
-                  <ion-option *ngFor="let day of days" [value]="day">{{ day }}</ion-option>
-                </ion-select>
-              </ion-item>
-
-              <ion-row>
-                <ion-col>
-                  <button ion-button
-                          [disabled]="editOfficeHourForm.invalid || !instructing.value || newOfficeHours.error"
-                          (click)="addNewOfficeHours()">Save</button>
-                </ion-col>
-              </ion-row>
-
             </ion-list>
+
+            <button ion-button
+                    [disabled]="editOfficeHourForm.invalid || !instructing.value || newOfficeHours.error"
+                    (click)="addNewOfficeHours()">Save</button>
           </ion-card-content>
         </ion-card>
       </ion-slide>
@@ -109,6 +105,7 @@
                           name="instructing{{ i }}"
                           #instructing="ngModel"></ion-toggle>
             </ion-item>
+
             <ion-item>
               <ion-label stacked>Location</ion-label>
               <ion-input [(ngModel)]="officeHours.location"
@@ -116,7 +113,18 @@
                          required
                          [disabled]="!instructing.value"></ion-input>
             </ion-item>
-            <ion-item>
+
+            <ion-item padding-top>
+              <ion-label stacked>Day</ion-label>
+              <ion-select [(ngModel)]="officeHours.dayOfWeek"
+                          name="dayOfWeek{{ i }}"
+                          required
+                          [disabled]="!instructing.value">
+                <ion-option *ngFor="let day of days" [value]="day">{{ day }}</ion-option>
+              </ion-select>
+            </ion-item>
+
+            <ion-item class="OHTime" float-start padding-top>
               <ion-label stacked>Start Time</ion-label>
               <ion-datetime [(ngModel)]="officeHours.startTime"
                             (ionChange)="fillEndTime(officeHours); isValid(officeHours)"
@@ -126,7 +134,8 @@
                             required
                             [disabled]="!instructing.value"></ion-datetime>
             </ion-item>
-            <ion-item>
+
+            <ion-item class="OHTime" float-end padding-top>
               <ion-label stacked>End Time</ion-label>
               <ion-datetime [(ngModel)]="officeHours.endTime"
                             (ionChange)="isValid(officeHours)"
@@ -141,25 +150,12 @@
               <span class="global__input-error">{{ officeHour.error }}</span>
             </div>
 
-            <ion-item>
-              <ion-label stacked>Day</ion-label>
-              <ion-select [(ngModel)]="officeHours.dayOfWeek"
-                          name="dayOfWeek{{ i }}"
-                          required
-                          [disabled]="!instructing.value">
-                <ion-option *ngFor="let day of days" [value]="day">{{ day }}</ion-option>
-              </ion-select>
-            </ion-item>
-
-            <ion-row>
-              <ion-col>
-                <button ion-button
-                        [disabled]="editOfficeHourForm.invalid || !instructing.value || !editOfficeHourForm.dirty || officeHours.error"
-                        (click)="updateOfficeHours(officeHours)">Save</button>
-              </ion-col>
-            </ion-row>
-
           </ion-list>
+
+          <button ion-button
+                  [disabled]="editOfficeHourForm.invalid || !instructing.value || !editOfficeHourForm.dirty || officeHours.error"
+                  (click)="updateOfficeHours(officeHours)">Save</button>
+
         </ion-card-content>
       </ion-card>
     </ion-slide>
