Styling for password reset page

--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -46,7 +46,7 @@
       </ion-row>
 
       <ion-item>
-        <button ion-button class="loginButton" item-start class="loginButton" (click)="login()" [disabled]="loginForm.invalid">Login</button>
+        <button ion-button item-start class="loginButton" (click)="login()" [disabled]="loginForm.invalid">Login</button>
         <button ion-button item-end class="signUp" [navPush]="'SignUpPage'">Sign Up</button>
       </ion-item>
 
