--- a/src/components/course-list/course-list.scss
+++ b/src/components/course-list/course-list.scss
@@ -20,5 +20,14 @@ course-list {
   .trash {
     background: map-get($colors, danger);
   }
+
+  .body{
+    width: 80%;
+    height: 80%;
+    top: 8%;
+    left: 12%;
+    position: absolute;
+    opacity: 0.8;
+  }
 }
 
