--- a/src/pages/student-queue/student-queue.scss
+++ b/src/pages/student-queue/student-queue.scss
@@ -1,3 +1,24 @@
 page-student-queue {
 
+  .item-md {
+    font-size: 150%;
+  }
+
+  .content{
+    .list-header {
+      font-size: 140%;
+    }
+
+
+
+    .list {
+      .item-md {
+        font-size: 160%;
+      }
+    }
+
+    .badge {
+      font-size: 140%;
+    }
+  }
 }
